--- a/src/ui-dark.css
+++ b/src/ui-dark.css
@@ -1,10 +1,10 @@
 :root.dark {
-  --color-bg: #1d1d1f;
-  --color-panel: #2a2a2c;
-  --color-border: #3a3a3c;
+  --color-bg: #1c1c1f;
+  --color-panel: #2a2a2e;
+  --color-border: #3a3a3e;
 
-  --color-text: #eee;
-  --color-text-secondary: #bbb;
+  --color-text: #ededed;
+  --color-text-secondary: #bbbbbb;
 
   --color-primary: #3ea6ff;
   --color-primary-hover: #1c8dd5;
